# capteur-serre

./: .gitignore  agriculture.code-workspace
BLE/broadcaster/: CMakeLists.txt  Kconfig  Kconfig copy  README.rst  prj.conf  sample.yaml
BLE/broadcaster/boards/: lrima_greenhouse_nrf52833.overlay  nrf52833dk_nrf52833.overlay
BLE/broadcaster/boards/arm/lrima_greenhouse_nrf52833/: Kconfig.board  Kconfig.defconfig  lrima_greenhouse_nrf52833-pinctrl.dtsi  lrima_greenhouse_nrf52833.dts  lrima_greenhouse_nrf52833.yaml  lrima_greenhouse_nrf52833_defconfig
BLE/broadcaster/dts/bindings/: battery-voltage.yaml
BLE/broadcaster/src/: main.c  utils.c  utils.h
BLE/broadcaster/src/drivers/: adc.h  ble.c  ble.h
BLE/central/: config.ini
BLE/central-nrf/: Kconfig  README.rst  prj.conf  sample.yaml
BLE/central-nrf/boards/: nrf52840dongle_nrf52840.overlay
BLE/central-nrf/src/: main.c
BLE/central/serreiot/: device.py  main.py  reader.py
Sensors/aht20-21/: prj.conf
Sensors/aht20-21/src/: main.c
Sensors/light_sensor/: nrf52833dk_nrf52833.overlay  prj.conf  sample.yaml
Sensors/light_sensor/src/: main.c
Sensors/sensors-reader/: CMakeLists.txt  Kconfig  nrf52833dk_nrf52833.overlay  prj.conf  sample.yaml
Sensors/sensors-reader/boards/: nrf52833dk_nrf52833.overlay
Sensors/sensors-reader/dts/bindings/: soil-humidity.yaml
Sensors/sensors-reader/src/: main.c  utils.c  utils.h
Sensors/sensors-reader/src/drivers/: adc.c  adc.h  aht20.c  aht20.h  batterie.c  batterie.h  humidity.c  humidity.h  ntcThermistor.c  ntcThermistor.h  pt19.c  pt19.h
Sensors/soil_humidity/src/: main.c
Sensors/temperature_sensor/boards/: nrf52dk_nrf52832.overlay
Sensors/temperature_sensor/src/: main.c
